# Librarian

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.kiro/settings/: mcp.json
.kiro/specs/librarian/: design-technical-architecture.md  design-user-journey-flow.md  design.md  requirements.md  tasks.md
.kiro/steering/: development-guidelines.md  product-vision.md  tech-stack.md
docs/: ARCHITECTURE.md
src/librarian/: __init__.py  app.py
src/librarian/analysis/: __init__.py  book_analyzer.py  exa_tool.py  models.py
src/librarian/analysis/prompts/: __init__.py  book_analyzer_system.md  book_analyzer_task.md
src/librarian/ranking/: __init__.py  book_ranker.py  candidates_finder.py  models.py  tavily_tool.py
src/librarian/ranking/prompts/: book_ranker_system.md  book_ranker_task.md  candidates_finder_system.md  candidates_finder_task.md
src/librarian/seed/: __init__.py  books_api.py  models.py  query_parser.py
src/librarian/seed/prompts/: query_parser_system.md
src/librarian/shared/: exceptions.py  utils.py
src/librarian/shared/ai/: __init__.py  gemini_client.py  strands_exceptions.py
src/librarian/shared/config/: api_keys.py
src/librarian/shared/logging/: colored_formatter.py
src/librarian/shared/models/: __init__.py  (+2 more)
src/librarian/templates/: base.html  dna_analysis.html  home.html  recommendations_partial.html  search.html
src/librarian/writing/: __init__.py  models.py  recommendations_writer.py
tests/: conftest.py  helpers.py  test_agents.py  test_app.py  test_books_api.py  test_models.py  test_tools.py
(+4 files in other folders)
